# OOP_Design

./: .clang-format  .gitignore  CMakeCache.txt  CMakelists.txt  README.md  bun.lockb  cmake_install.cmake  debug.py  main.cpp  package.json  pnpm-lock.yaml  tailwind.config.js  test.cpp
.devcontainer/: Dockerfile
src/: main.cpp  main.ts
src/api/: qq.cpp  qq.h  weibo.cpp  weibo.h  weixin.cpp  weixin.h  wx.h
src/api/qq/: friend.h  message.h  user.h
src/class/: base.h  qq.h  reflection.h  user.h
src/dao/: base.h  friend.h  group.h  message.h  user.h
src/dao/qq/: chat.h  message.h  user.h  user_dao.h
src/db/: database.sql  db.cpp  db.h  interact.h  querys.sql
src/http/: base.cpp  base.h  file.cpp  file.h  handler.cpp  handler.h  http.cpp  http.h  httphandler.cpp  httphandler.h  json.h  struct.cpp  struct.h
src/router/: index.ts
src/stores/: axios.ts
src/tcp/: server.cpp  server.h
src/utils/: crypto.h  log.h  map.h  uuid.cpp  uuid.h
src/views/: IndexView.vue  LoginView.vue  RegisterView.vue  recv_tmp.vue
src/views/qq/: IndexView.vue  LoginView.vue  RegisterView.vue
src/views/wb/: IndexView.vue  LoginView.vue  RegisterView.vue
src/views/wx/: IndexView.vue  LoginView.vue  RegisterView.vue
tests/: CMakeLists.txt  test.cpp  test_http_struct.cpp
